updated message on deafault page

--- a/views/defaultMessage.ejs
+++ b/views/defaultMessage.ejs
@@ -16,7 +16,9 @@
             </div>
             <div class = "col" style="margin-left: 30px;">
                 <p>
-                    Lorem ipsum filler text.
+                    Hey if you are reading this that means you are on the Demo Webpage to showcase what my project is and what it can do.
+                    I have a personal server running a fully functional version of this website that I use for myself to keep track of my
+                    home work assignments!
                 </p>
                 <form action="/home" method="GET">
                     <button class = "btn btn-primary" type="submit" id="continueBtn">Continue</button>
