--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,15 +32,8 @@
                     </h1>
                 </div>
                 <div class = "col-2 button-alignment" style= "justify-content: flex-end;">
-                    <!-- sort by button -->
-                    <button class = "btn btn-primary dropdown-toggle" type = "button" id="dropdownMenu2"
-                    data-bs-toggle="dropdown" aria-expanded="false">Sort By</button>
-                    <!-- items contained in the drop down menue -->
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                        <li><button class="dropdown-item" type="button">Upcoming</button></li>
-                        <li><button class="dropdown-item" type="button">Week</button></li>
-                        <li><button class="dropdown-item" type="button">Day</button></li>
-                      </ul>
+                    <!-- reset demo button -->
+                    <button class = "btn btn-primary" type = "button" id="resetDemoBtn">Reset Demo</button>
                 </div>
             </div>
         </div>
