--- a/views/defaultMessage.ejs
+++ b/views/defaultMessage.ejs
@@ -14,7 +14,7 @@
                 <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
                 class="img-fluid" alt="Sample image">
             </div>
-            <div class = "col" style="margin-left: 30px;">
+            <div class = "col" style="margin-left: 30px; margin-right: 30px;">
                 <p>
                     Hey if you are reading this that means you are on the Demo Webpage to showcase what my project is and what it can do.
                     I have a personal server running a fully functional version of this website that I use for myself to keep track of my
